# distributed-system

./: docker-compose.yml
auth-service/src/routes/: auth.js
login-service/: Dockerfile  Program.cs  appsettings.json  docker-compose.override.yml
login-service/Controllers/: LoginController.cs
match-service/: docker-compose.override.yml  main.go
search-service/: Cargo.toml  Dockerfile
search-service/src/: main.rs
