[package]
name = "search-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

